--- a/order_success.html
+++ b/order_success.html
@@ -11,9 +11,41 @@
     <header
       class="flex justify-between items-center w-full min-w-[315px] px-[30px] h-10 mx-auto my-[30px] md:max-w-[940px]"
     >
-      <button class="hover:cursor-pointer block md:hidden">
-        <img src="./images/dehaze-24px.png" alt="漢堡選單" />
-      </button>
+      <nav class="relative w-[50px] flex items-center md:hidden">
+        <button class="menu-btn">
+          <img
+            class="w-[24px] hover:cursor-pointer hover:scale-150"
+            src="./images/baseline-menu.svg"
+            alt="漢堡選單"
+          />
+        </button>
+        <ul
+          class="menu-list hidden absolute z-2 top-6 w-full border bg-white border-[#3F5D45] text-[#3F5D45] text-center"
+        >
+          <li>
+            <a
+              class="block w-full hover:bg-[#FFE180] active:[#FFE180]"
+              href="index.html"
+              >首頁</a
+            >
+          </li>
+          <li class="">
+            <a
+              class="block w-full hover:bg-[#FFE180] active:[#FFE180]"
+              href="product.html"
+              >甜點</a
+            >
+          </li>
+          <li class="">
+            <a
+              class="block w-full hover:bg-[#FFE180] active:[#FFE180]"
+              href="login.html"
+              >登入</a
+            >
+          </li>
+        </ul>
+      </nav>
+
       <picture class="w-[200px] h-10 items-center">
         <source
           media="(max-width:768px)"
@@ -41,25 +73,34 @@
       </nav>
     </header>
 
-    <main class="max-w-[940px] mx-auto flex flex-col justify-center items-center md:mb-[60px] relative">
-        <section class="relative w-full max-w-[940px] h-[518px] mx-auto flex justify-center overflow-hidden">
-            <img class="w-full h-full object-cover"src="https://bit.ly/2P7GhNd" alt="付款成功主視覺">
-            <div class="absolute top-[208px] w-[190px] md:top-[129px]">
-                <ol class="stepper-dark w-full mb-[31.2px]">
-                    <li class="stepper-dark-item first check"></li>
-                    <li class="stepper-dark-item check"></li>
-                    <li class="stepper-dark-item last check"></li>
-                </ol>
-                <img class="w-full" src="./images/lg-付款成功.svg" alt="付款成功">
-            </div>
-        </section>
-        <section class="w-full md:absolute md:w-[300px] md:h-[65px] md:top-[279px]">
-            <button class="accent-btn w-full h-full">
-            <a class="block w-full h-full py-4" href="./product.html">繼續逛逛</a>
-            </button>
-        </section>
+    <main
+      class="max-w-[940px] mx-auto flex flex-col justify-center items-center md:mb-[60px] relative"
+    >
+      <section
+        class="relative w-full max-w-[940px] h-[518px] mx-auto flex justify-center overflow-hidden"
+      >
+        <img
+          class="w-full h-full object-cover"
+          src="https://bit.ly/2P7GhNd"
+          alt="付款成功主視覺"
+        />
+        <div class="absolute top-[208px] w-[190px] md:top-[129px]">
+          <ol class="stepper-dark w-full mb-[31.2px]">
+            <li class="stepper-dark-item first check"></li>
+            <li class="stepper-dark-item check"></li>
+            <li class="stepper-dark-item last check"></li>
+          </ol>
+          <img class="w-full" src="./images/lg-付款成功.svg" alt="付款成功" />
+        </div>
+      </section>
+      <section
+        class="w-full md:absolute md:w-[300px] md:h-[65px] md:top-[279px]"
+      >
+        <button class="accent-btn w-full h-full">
+          <a class="block w-full h-full py-4" href="./product.html">繼續逛逛</a>
+        </button>
+      </section>
     </main>
-
 
     <footer class="max-w-[1024px] mx-auto">
       <section
@@ -145,5 +186,6 @@
     </footer>
 
     <script src="./js/all.js"></script>
+    <script src="./js/header.js"></script>
   </body>
 </html>
