--- a/order_reciept.html
+++ b/order_reciept.html
@@ -121,11 +121,11 @@
               </select>
 
               <figure>
-                <img
+                <img class="-mb-3"
                   src="./images/baseline-arrow-drop-up.png"
                   alt="上一個選項"
                 />
-                <img
+                <img class="-mt-3"
                   src="./images/baseline-arrow-drop-down.png"
                   alt="下一個選項"
                 />
@@ -141,11 +141,11 @@
                 placeholder="新興區"
               />
               <figure>
-                <img
+                <img class="-mb-3"
                   src="./images/baseline-arrow-drop-up.png"
                   alt="上一個選項"
                 />
-                <img
+                <img class="-mt-3"
                   src="./images/baseline-arrow-drop-down.png"
                   alt="下一個選項"
                 />
