--- a/order_shipping.html
+++ b/order_shipping.html
@@ -150,11 +150,11 @@
                   <option value="連江縣">連江縣</option>
                 </select>
                 <figure>
-                  <img
+                  <img class="-mb-3"
                     src="./images/baseline-arrow-drop-up.png"
                     alt="上一個選項"
                   />
-                  <img
+                  <img class="-mt-3"
                     src="./images/baseline-arrow-drop-down.png"
                     alt="下一個選項"
                   />
@@ -172,11 +172,11 @@
                   placeholder="新興區"
                 />
                 <figure>
-                  <img
+                  <img class="-mb-3"
                     src="./images/baseline-arrow-drop-up.png"
                     alt="上一個選項"
                   />
-                  <img
+                  <img class="-mt-3"
                     src="./images/baseline-arrow-drop-down.png"
                     alt="下一個選項"
                   />
