--- a/product.html
+++ b/product.html
@@ -82,7 +82,7 @@
         class="max-w-[940px] mx-auto flex justify-between mt-[60px] max-[769px]:flex-col max-[769px]:items-center max-[769px]:mt-0"
       >
         <nav class="min-w-[300px] max-[769px]:w-full max-[769px]:mb-[30px]">
-          <ul>
+          <ul id="series-select">
             <li class="nav-title"><span>甜點類別</span></li>
             <li class="nav-btn"><a>所有甜點(48)</a></li>
             <li class="nav-btn"><a>本日精選(10)</a></li>
@@ -92,7 +92,9 @@
         </nav>
 
         <section class="w-[620px] max-[769px]:w-[315px]">
-          <ul class="grid grid-cols-2 gap-5 max-[769px]:grid-cols-1">
+          
+          <ul id="product-list" class="grid grid-cols-2 gap-5 max-[769px]:grid-cols-1">
+            <!-- 以下產品卡片用JS渲染 -->
             <li>
               <figure class="relative">
                 <div class="label absolute z-10 left-5">
@@ -221,7 +223,7 @@
             </li>
           </ul>
 
-          <ul class="flex justify-end mt-[30px] max-[769px]:justify-center">
+          <ul id="page-select" class="flex justify-end mt-[30px] max-[769px]:justify-center">
             <li>
               <button
                 class="w-[60px] h-[60px] flex justify-center items-center cursor-pointer border border-[#EAF0ED]"
@@ -335,7 +337,7 @@
       </section>
     </footer>
 
-    <script src="./js/all.js"></script>
+    <script src="./js/main.js" type="module" defer></script>
     <script src="./js/header.js"></script>
   </body>
 </html>
