--- a/order_shipping.html
+++ b/order_shipping.html
@@ -6,6 +6,7 @@
     <title>Sweetaste訂單詳情-運送方式</title>
     <link href="./src/output.css" rel="stylesheet" />
     <link href="./scss/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
   </head>
   <body>
     <header
