feat: add address select function

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
               src="./images/sm-今天是個吃甜點的好日子@2x.png"
               alt="今天是個吃甜點的好日子。"
             />
-            <p class="text-[#3F5D45]">© 2018 Sweetaste* All Rights Reserved</p>
+            <p class="copyright">© 2018 Sweetaste* All Rights Reserved</p>
           </div>
         </div>
       </section>
