--- a/order_e-reciept.html
+++ b/order_e-reciept.html
@@ -55,7 +55,7 @@
           </ol>
         </section>
         <section class="h-[56px] flex justify-between items-center px-[30px]">
-          <a href="order_e-reciept.html" class="option-btn w-full h-full"
+          <a href="order_e-reciept.html" class="option-btn selected w-full h-full"
             >電子發票
           </a>
           <a href="order_reciept.html" class="option-btn w-full h-full"
@@ -63,7 +63,6 @@
           </a>
         </section>
 
-        <!-- 電子發票內容 (用JS渲染) -->
         <form class="px-[30px] mt-[30px] flex flex-col gap-4">
           <section class="flex flex-1 flex-col gap-[9px]">
             <label class="text-[20px] text-[#EAF0ED] font-semibold"
@@ -103,7 +102,6 @@
         </button>
       </div>
 
-      <!-- 網頁版訂單摘要&購物清單 -->
       <div class="flex flex-col justify-between gap-5">
         <section
           class="hidden flex-col items-center w-full min-w-[300px] border border-[#EAF0ED] md:flex"
