--- a/order_shipping.html
+++ b/order_shipping.html
@@ -6,13 +6,16 @@
     <title>Sweetaste訂單詳情-運送方式</title>
     <link href="./src/output.css" rel="stylesheet" />
     <link href="./scss/main.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+    />
   </head>
   <body>
     <header
       class="flex justify-between w-full max-w-[1024px] h-10 px-[33px] md:px-[42px] mr-auto ml-auto mt-[30px] mb-[30px] items-center"
     >
-       <nav class="relative w-[50px] flex items-center md:hidden">
+      <nav class="relative w-[50px] flex items-center md:hidden">
         <button class="menu-btn">
           <img
             class="w-[24px] hover:cursor-pointer hover:scale-150"
@@ -20,15 +23,29 @@
             alt="漢堡選單"
           />
         </button>
-        <ul class="menu-list hidden absolute z-2 top-6 w-full border bg-white  border-[#3F5D45] text-[#3F5D45] text-center">
+        <ul
+          class="menu-list hidden absolute z-2 top-6 w-full border bg-white border-[#3F5D45] text-[#3F5D45] text-center"
+        >
           <li>
-            <a class="block w-full hover:bg-[#FFE180] active:[#FFE180]" href="index.html">首頁</a>
+            <a
+              class="block w-full hover:bg-[#FFE180] active:[#FFE180]"
+              href="index.html"
+              >首頁</a
+            >
           </li>
           <li class="">
-            <a class="block w-full hover:bg-[#FFE180] active:[#FFE180]" href="product.html">甜點</a>
+            <a
+              class="block w-full hover:bg-[#FFE180] active:[#FFE180]"
+              href="product.html"
+              >甜點</a
+            >
           </li>
           <li class="">
-            <a class="block w-full hover:bg-[#FFE180] active:[#FFE180]" href="login.html">登入</a>
+            <a
+              class="block w-full hover:bg-[#FFE180] active:[#FFE180]"
+              href="login.html"
+              >登入</a
+            >
           </li>
         </ul>
       </nav>
@@ -126,6 +143,7 @@
               >
                 <select
                   class="bg-[#EAF0ED] key-in w-full h-full appearance-none"
+                  id="city-selection"
                 >
                   <option value="基隆市">基隆市</option>
                   <option value="台北市">台北市</option>
@@ -151,11 +169,13 @@
                   <option value="連江縣">連江縣</option>
                 </select>
                 <figure>
-                  <img class="-mb-3"
+                  <img
+                    class="-mb-3"
                     src="./images/baseline-arrow-drop-up.png"
                     alt="上一個選項"
                   />
-                  <img class="-mt-3"
+                  <img
+                    class="-mt-3"
                     src="./images/baseline-arrow-drop-down.png"
                     alt="下一個選項"
                   />
@@ -166,18 +186,19 @@
             <section class="flex-1">
               <div
                 class="bg-[#EAF0ED] flex justify-end items-center min-w-[153px] h-[56px] pl-5 mb-4 relative"
+                
               >
-                <input
-                  class="bg-[#EAF0ED] key-in w-full h-full"
-                  type="text"
-                  placeholder="新興區"
-                />
+                <select class="bg-[#EAF0ED] key-in w-full h-full appearance-none" id="district-selection">
+                  <!-- 用JS更新並載入鄉鎮區選項 -->
+                </select>
                 <figure>
-                  <img class="-mb-3"
+                  <img
+                    class="-mb-3"
                     src="./images/baseline-arrow-drop-up.png"
                     alt="上一個選項"
                   />
-                  <img class="-mt-3"
+                  <img
+                    class="-mt-3"
                     src="./images/baseline-arrow-drop-down.png"
                     alt="下一個選項"
                   />
@@ -361,7 +382,7 @@
       </section>
     </footer>
 
-    <script src="./js/all.js"></script>
     <script src="./js/header.js"></script>
+    <script src="./js/form.js" type="module"></script>
   </body>
 </html>
