feat:optimize hover

--- a/order_payment.html
+++ b/order_payment.html
@@ -32,13 +32,15 @@
           </li>
         </ul>
       </nav>
-      <picture class="w-[200px] h-10 items-center">
-        <source
-          media="(max-width:768px)"
-          srcset="./images\logotype-lg-dark.svg"
-        />
-        <img class="h-10" src="./images/logo-all-dark.svg" alt="品牌Logo" />
-      </picture>
+      <a href="index.html">
+        <picture class="h-[17.74px] items-center justify-center md:h-10 ">
+          <source
+            media="(max-width:768px)"
+            srcset="./images/logotype-lg-dark.svg"
+          />
+          <img class="h-[17.74px] md:h-10" src="./images/logo-all-dark.svg" alt="品牌Logo" />
+        </picture>
+      </a>
       <nav class="max-w-[300px] flex justify-between gap-[79px] items-center">
         <ul class="w-[215px] hidden md:flex justify-between items-center">
           <li class="text-[#3F5D45] font-semibold">
