--- a/cart.html
+++ b/cart.html
@@ -6,12 +6,13 @@
     <title>Sweetaste購物車</title>
     <link href="./src/output.css" rel="stylesheet" />
     <link href="./scss/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
   </head>
   <body>
     <header
       class="flex justify-between w-full max-w-[1024px] h-10 px-[33px] md:px-[42px] mr-auto ml-auto mt-[30px] mb-[30px] items-center"
     >
-       <nav class="relative w-[50px] flex items-center md:hidden">
+      <nav class="relative w-[50px] flex items-center md:hidden">
         <button class="menu-btn">
           <img
             class="w-[24px] hover:cursor-pointer hover:scale-150"
@@ -19,15 +20,29 @@
             alt="漢堡選單"
           />
         </button>
-        <ul class="menu-list hidden absolute z-2 top-6 w-full border bg-white  border-[#3F5D45] text-[#3F5D45] text-center">
+        <ul
+          class="menu-list hidden absolute z-2 top-6 w-full border bg-white border-[#3F5D45] text-[#3F5D45] text-center"
+        >
           <li>
-            <a class="block w-full hover:bg-[#FFE180] active:[#FFE180]" href="index.html">首頁</a>
+            <a
+              class="block w-full hover:bg-[#FFE180] active:[#FFE180]"
+              href="index.html"
+              >首頁</a
+            >
           </li>
           <li class="">
-            <a class="block w-full hover:bg-[#FFE180] active:[#FFE180]" href="product.html">甜點</a>
+            <a
+              class="block w-full hover:bg-[#FFE180] active:[#FFE180]"
+              href="product.html"
+              >甜點</a
+            >
           </li>
           <li class="">
-            <a class="block w-full hover:bg-[#FFE180] active:[#FFE180]" href="login.html">登入</a>
+            <a
+              class="block w-full hover:bg-[#FFE180] active:[#FFE180]"
+              href="login.html"
+              >登入</a
+            >
           </li>
         </ul>
       </nav>
@@ -37,45 +52,58 @@
           media="(max-width:768px)"
           srcset="./images\logotype-lg-dark.svg"
         />
-        <img class="h-10" src="./images/logo-all-dark.svg" alt="品牌Logo" />
+        <a href="index.html"
+          ><img class="h-10" src="./images/logo-all-dark.svg" alt="品牌Logo"
+        /></a>
       </picture>
       <nav class="max-w-[300px] flex justify-between gap-[79px] items-center">
         <ul class="w-[215px] hidden md:flex justify-between items-center">
-          <li class="text-[#3F5D45] font-semibold">
+          <li class="navbar-btn">
             <a href="index.html">首頁</a>
           </li>
-          <li class="text-[#3F5D45] font-semibold">
+          <li class="navbar-btn">
             <a href="product.html">甜點</a>
           </li>
-          <li class="text-[#3F5D45] font-semibold">
+          <li class="navbar-btn">
             <a href="login.html">登入</a>
           </li>
         </ul>
         <div class="w-[24px]">
           <a href="cart.html"
-            ><img src="./images/shopping_cart.png" alt="前往購物車"
+            ><img
+              class="hover:scale-150 active:scale-150"
+              src="./images/shopping-cart.svg"
+              alt="前往購物車"
           /></a>
         </div>
       </nav>
     </header>
 
-    <main class="max-w-[1024px] min-w-[375px] mx-auto md:flex md:flex-row md:justify-between md:px-[42px]">
+    <main
+      class="max-w-[1024px] min-w-[375px] mx-auto md:flex md:flex-row md:justify-between md:px-[42px]"
+    >
       <section class="flex flex-col items-center w-full md:w-[620px]">
         <h1
           class="flex justify-center items-center w-full h-[65px] bg-[#EAF0ED] text-2xl font-semibold text-[#3F5D45]"
         >
           您的購物車
         </h1>
-        <ul class="w-full p-[30px] md:px-0">
-          <li class="w-full md:flex md:justify-between md:items-center">
-            <div class="flex min-h-[106px] pb-[8.5px] md:justify-between md:w-[437px]">
+        <ul class="w-full p-[30px] flex flex-col gap-[30.5px] md:px-0 md:gap-5">
+          <li class="w-full md:border-b md:border-[#EAF0ED] md:flex md:justify-between md:items-center md:pb-5">
+            <div
+              class="flex min-h-[106px] pb-[8.5px] md:justify-between md:w-[437px] md:pb-0"
+            >
               <img
                 class="w-[49%] aspect-[1.5] object-cover md:aspect-square md:w-[110px]"
                 src="https://bit.ly/2QvsT63"
                 alt="草莓優格碗"
               />
-              <div class="w-[51%] pl-4 flex flex-col justify-between md:flex-row md:p-0 md:w-[290px] md:items-center">
-                <div class="text-[#3F5D45] md:flex md:justify-center md:flex-col">
+              <div
+                class="w-[51%] pl-4 flex flex-col justify-between md:flex-row md:p-0 md:w-[290px] md:items-center"
+              >
+                <div
+                  class="text-[#3F5D45] md:flex md:justify-center md:flex-col"
+                >
                   <p class="text-[20px]">焦糖馬卡龍</p>
                   <p>NT$ 450</p>
                 </div>
@@ -99,22 +127,32 @@
               </div>
             </div>
             <div
-              class="flex items-center justify-end text-[#3F5D45] text-[20px] font-semibold h-[45px] bor-y border-[#EAF0ED]"
+              class="flex items-center justify-end text-[#3F5D45] text-[20px] font-semibold h-[45px] border-y border-[#EAF0ED] md:border-0"
             >
               <span>NT$ 900</span>
             </div>
-            <img class="hidden w-[24px] h-[24px] md:block" src="./images/baseline-delete-outline.png" alt="刪除">
+            <img
+              class="hidden w-[24px] h-[24px] hover:scale-150 cursor-pointer md:block"
+              src="./images/baseline-delete-outline.svg"
+              alt="刪除"
+            />
           </li>
 
-          <li class="w-full md:flex md:justify-between md:items-center">
-            <div class="flex min-h-[106px] pb-[8.5px] md:justify-between md:w-[437px]">
+          <li class="w-full md:flex md:justify-between md:border-b md:border-[#EAF0ED] md:items-center">
+            <div
+              class="flex min-h-[106px] md:justify-between md:w-[437px] pb-[8.5px] md:pb-5"
+            >
               <img
                 class="w-[49%] aspect-[1.5] object-cover md:aspect-square md:w-[110px]"
                 src="https://bit.ly/2zBDAxX"
                 alt="草莓優格碗"
               />
-              <div class="w-[51%] pl-4 flex flex-col justify-between md:flex-row md:p-0 md:w-[290px] md:items-center">
-                <div class="text-[#3F5D45] md:flex md:justify-center md:flex-col">
+              <div
+                class="w-[51%] pl-4 flex flex-col justify-between md:flex-row md:p-0 md:w-[290px] md:items-center"
+              >
+                <div
+                  class="text-[#3F5D45] md:flex md:justify-center md:flex-col"
+                >
                   <p class="text-[20px]">焦糖馬卡龍</p>
                   <p>NT$ 450</p>
                 </div>
@@ -138,22 +176,32 @@
               </div>
             </div>
             <div
-              class="flex items-center justify-end text-[#3F5D45] text-[20px] font-semibold h-[45px] bor-y border-[#EAF0ED]"
+              class="flex items-center justify-end text-[#3F5D45] text-[20px] font-semibold h-[45px] border-y border-[#EAF0ED] md:border-0"
             >
               <span>NT$ 900</span>
             </div>
-            <img class="hidden w-[24px] h-[24px] md:block" src="./images/baseline-delete-outline.png" alt="刪除">
+            <img
+              class="hidden w-[24px] h-[24px] hover:scale-150 cursor-pointer md:block"
+              src="./images/baseline-delete-outline.svg"
+              alt="刪除"
+            />
           </li>
 
-          <li class="w-full md:flex md:justify-between md:items-center">
-            <div class="flex min-h-[106px] pb-[8.5px] md:justify-between md:w-[437px]">
+          <li class="w-full md:flex md:justify-between md:items-center md:pb-5">
+            <div
+              class="flex min-h-[106px] pb-[8.5px] md:justify-between md:w-[437px]"
+            >
               <img
                 class="w-[49%] aspect-[1.5] object-cover md:aspect-square md:w-[110px]"
                 src="https://bit.ly/2zKOP7w"
                 alt="焦糖馬卡龍"
               />
-              <div class="w-[51%] pl-4 flex flex-col justify-between md:flex-row md:p-0 md:w-[290px] md:items-center">
-                <div class="text-[#3F5D45] md:flex md:justify-center md:flex-col">
+              <div
+                class="w-[51%] pl-4 flex flex-col justify-between md:flex-row md:p-0 md:w-[290px] md:items-center"
+              >
+                <div
+                  class="text-[#3F5D45] md:flex md:justify-center md:flex-col"
+                >
                   <p class="text-[20px]">焦糖馬卡龍</p>
                   <p>NT$ 450</p>
                 </div>
@@ -177,11 +225,15 @@
               </div>
             </div>
             <div
-              class="flex items-center justify-end text-[#3F5D45] text-[20px] font-semibold h-[45px] bor-y border-[#EAF0ED]"
+              class="flex items-center justify-end text-[#3F5D45] text-[20px] font-semibold h-[45px] border-y border-[#EAF0ED] md:border-0"
             >
               <span>NT$ 900</span>
             </div>
-            <img class="hidden w-[24px] h-[24px] md:block" src="./images/baseline-delete-outline.png" alt="刪除">
+            <img
+              class="hidden w-[24px] h-[24px] hover:scale-150 cursor-pointer md:block"
+              src="./images/baseline-delete-outline.svg"
+              alt="刪除"
+            />
           </li>
         </ul>
       </section>
@@ -207,7 +259,9 @@
       </section>
       <section class="md:hidden">
         <button class="accent-btn w-full h-full mt-4">
-          <a class="block w-full h-full py-4" href="./order_shipping.html">結帳</a>
+          <a class="block w-full h-full py-4" href="./order_shipping.html"
+            >結帳</a
+          >
         </button>
       </section>
 
@@ -232,13 +286,14 @@
         </dl>
 
         <button class="accent-btn w-full h-[65px]">
-          <a class="block w-full h-full py-4" href="./order_shipping.html">結帳</a>
+          <a class="block w-full h-full py-4" href="./order_shipping.html"
+            >結帳</a
+          >
         </button>
       </section>
-
     </main>
 
-    <footer class="max-w-[1024px] mx-auto">
+    <footer>
       <section
         class="flex items-center h-[116px] bg-[#3F5D45] max-[769px]:h-[186px]"
       >
