--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           />
         </button>
         <ul class="menu-list hidden absolute z-2 top-6 w-full border bg-white  border-[#3F5D45] text-[#3F5D45] text-center">
-          <li>
+          <li class="">
             <a class="block w-full hover:bg-[#FFE180] active:[#FFE180]" href="index.html">首頁</a>
           </li>
           <li class="">
@@ -32,34 +32,37 @@
         </ul>
       </nav>
 
-      <picture class="w-[200px] h-10 items-center">
-        <source
-          media="(max-width:768px)"
-          srcset="./images\logotype-lg-dark.svg"
-        />
-        <img class="h-10" src="./images/logo-all-dark.svg" alt="品牌Logo" />
-      </picture>
+      <a href="index.html">
+        <picture class="h-[17.74px] items-center justify-center md:h-10 ">
+          <source
+            media="(max-width:768px)"
+            srcset="./images/logotype-lg-dark.svg"
+          />
+          <img class="h-[17.74px] md:h-10" src="./images/logo-all-dark.svg" alt="品牌Logo" />
+        </picture>
+      </a>
+
       <nav class="max-w-[300px] flex justify-between gap-[79px] items-center">
         <ul class="w-[215px] hidden md:flex justify-between items-center">
-          <li class="text-[#3F5D45] font-semibold">
+          <li class="navbar-btn">
             <a href="index.html">首頁</a>
           </li>
-          <li class="text-[#3F5D45] font-semibold">
+          <li class="navbar-btn">
             <a href="product.html">甜點</a>
           </li>
-          <li class="text-[#3F5D45] font-semibold">
+          <li class="navbar-btn">
             <a href="login.html">登入</a>
           </li>
         </ul>
         <div class="w-[24px]">
           <a href="cart.html"
-            ><img src="./images/shopping_cart.png" alt="前往購物車"
+            ><img class="hover:scale-150" src="./images/shopping-cart.svg" alt="前往購物車"
           /></a>
         </div>
       </nav>
     </header>
 
-    <main class="max-w-[1024px] mx-auto">
+    <main>
       <section class="relative w-full mx-auto max-w-[1024px]">
         <picture class="h-[496px] overflow-hidden z-0">
           <img
@@ -76,7 +79,7 @@
             style="background-image: url('https://bit.ly/2R5tqwD')"
           >
             <a
-              class="flex justify-center items-center w-full h-full bg-[#3F5D45]/80 backdrop-blur-[5px] hover:bg-[#FFE180]/80 hover:font-semibold hover:text-[#3F5D45]"
+              class="flex justify-center items-center w-full h-full bg-[#3F5D45]/80 backdrop-blur-[5px] hover:bg-[#FFE180]/80 hover:font-semibold hover:text-[#3F5D45] active:[#FFE180]/80 active:font-semibold active:text-[#3F5D45]"
               href="#"
               >本日精選</a
             >
@@ -238,8 +241,8 @@
                 <span>本日精選</span>
               </div>
               <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/favorite_border.png"
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer w-5"
+                src="./images/baseline-favorite-border-empty.svg"
                 alt="加入我的收藏"
               />
               <img
@@ -260,8 +263,8 @@
                 <span>本日精選</span>
               </div>
               <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/favorite_border.png"
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer w-5"
+                src="./images/baseline-favorite-border-empty.svg"
                 alt="加入我的收藏"
               />
               <img
@@ -282,8 +285,8 @@
                 <span>本日精選</span>
               </div>
               <img
-                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/favorite_border.png"
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer w-5"
+                src="./images/baseline-favorite-border-empty.svg"
                 alt="加入我的收藏"
               />
               <img
@@ -395,7 +398,7 @@
               </div>
               <img
                 class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/favorite_border.png"
+                src="./images/baseline-favorite.svg"
                 alt="加入我的收藏"
               />
               <img
@@ -417,7 +420,7 @@
               </div>
               <img
                 class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/favorite_border.png"
+                src="./images/baseline-favorite.svg"
                 alt="加入我的收藏"
               />
               <img
@@ -439,7 +442,7 @@
               </div>
               <img
                 class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
-                src="./images/favorite_border.png"
+                src="./images/baseline-favorite.svg"
                 alt="加入我的收藏"
               />
               <img
@@ -459,7 +462,7 @@
       </section>
     </main>
 
-    <footer class="max-w-[1024px] mx-auto">
+    <footer>
       <section
         class="flex items-center h-[116px] bg-[#3F5D45] max-[769px]:h-[186px]"
       >
