--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <header
       class="flex justify-between w-full max-w-[1024px] h-10 px-[33px] md:px-[42px] mr-auto ml-auto mt-[30px] mb-[30px] items-center"
     >
-       <nav class="relative w-[50px] flex items-center md:hidden">
+       <nav class="relative w-[24px] flex items-center md:hidden">
         <button class="menu-btn">
           <img
             class="w-[24px] hover:cursor-pointer hover:scale-150"
@@ -32,28 +32,30 @@
           </li>
         </ul>
       </nav>
-      <picture class="w-[200px] h-10 items-center">
-        <source
-          media="(max-width:768px)"
-          srcset="./images\logotype-lg-dark.svg"
-        />
-        <img class="h-10" src="./images/logo-all-dark.svg" alt="品牌Logo" />
-      </picture>
+      <a href="index.html">
+        <picture class="h-[17.74px] items-center justify-center md:h-10 ">
+          <source
+            media="(max-width:768px)"
+            srcset="./images/logotype-lg-dark.svg"
+          />
+          <img class="h-[17.74px] md:h-10" src="./images/logo-all-dark.svg" alt="品牌Logo" />
+        </picture>
+      </a>
       <nav class="max-w-[300px] flex justify-between gap-[79px] items-center">
         <ul class="w-[215px] hidden md:flex justify-between items-center">
-          <li class="text-[#3F5D45] font-semibold">
+          <li class="navbar-btn">
             <a href="index.html">首頁</a>
           </li>
-          <li class="text-[#3F5D45] font-semibold">
+          <li class="navbar-btn">
             <a href="product.html">甜點</a>
           </li>
-          <li class="text-[#3F5D45] font-semibold">
+          <li class="navbar-btn">
             <a href="login.html">登入</a>
           </li>
         </ul>
         <div class="w-[24px]">
           <a href="cart.html"
-            ><img src="./images/shopping_cart.png" alt="前往購物車"
+            ><img class="hover:scale-150 active:scale-150" src="./images/shopping-cart.svg" alt="前往購物車"
           /></a>
         </div>
       </nav>
