feat: fix cart item quantity btn & optimize footer

--- a/order_reciept.html
+++ b/order_reciept.html
@@ -289,12 +289,12 @@
       </div>
     </main>
 
-    <footer class="max-w-[1024px] mx-auto">
+    <footer>
       <section
-        class="flex items-center h-[116px] bg-[#3F5D45] max-[769px]:h-[186px]"
+        class="flex justify-center items-center h-[116px] px-10 bg-[#3F5D45] max-[769px]:h-[186px]"
       >
         <div
-          class="flex justify-between items-center w-[780px] mx-auto max-[769px]:flex-col h-[122px]"
+          class="flex justify-between items-center w-full max-w-[780px] mx-auto max-[769px]:flex-col h-[122px]"
         >
           <div class="flex justify-between w-[276px]">
             <img
@@ -309,7 +309,7 @@
           <div
             class="relative flex bg-[#EAF0ED] justify-end w-[380px] h-[56px] max-[769px]:w-[315px]"
           >
-            <input class="key-in w-[200px] md:w-[272px]" type="text" />
+            <input class="key-in w-[190px] md:w-[265px]" type="text" />
             <img
               class="absolute top-4 left-5 w-[24px] h-[24px]"
               src="./images/mail-24px.png"
@@ -328,7 +328,7 @@
         </div>
       </section>
 
-      <section class="h-[341px] bg-[#EAF0ED] flex items-center">
+      <section class="h-[341px] bg-[#EAF0ED] px-10 flex items-center">
         <div
           class="flex justify-between items-center w-full max-w-[780px] min-w-[315px] mx-auto max-[769px]:block max-[769px]:w-[315px]"
         >
@@ -366,7 +366,7 @@
               src="./images/sm-今天是個吃甜點的好日子@2x.png"
               alt="今天是個吃甜點的好日子。"
             />
-            <p class="text-[#3F5D45]">© 2018 Sweetaste* All Rights Reserved</p>
+            <p class="copyright">© 2018 Sweetaste* All Rights Reserved</p>
           </div>
         </div>
       </section>
