--- a/cart.html
+++ b/cart.html
@@ -323,10 +323,10 @@
 
     <footer>
       <section
-        class="flex items-center h-[116px] bg-[#3F5D45] max-[769px]:h-[186px]"
+        class="flex justify-center items-center h-[116px] px-10 bg-[#3F5D45] max-[769px]:h-[186px]"
       >
         <div
-          class="flex justify-between items-center w-[780px] mx-auto max-[769px]:flex-col h-[122px]"
+          class="flex justify-between items-center w-full max-w-[780px] mx-auto max-[769px]:flex-col h-[122px]"
         >
           <div class="flex justify-between w-[276px]">
             <img
@@ -341,7 +341,7 @@
           <div
             class="relative flex bg-[#EAF0ED] justify-end w-[380px] h-[56px] max-[769px]:w-[315px]"
           >
-            <input class="key-in w-[200px] md:w-[272px]" type="text" />
+            <input class="key-in w-[190px] md:w-[265px]" type="text" />
             <img
               class="absolute top-4 left-5 w-[24px] h-[24px]"
               src="./images/mail-24px.png"
@@ -360,7 +360,7 @@
         </div>
       </section>
 
-      <section class="h-[341px] bg-[#EAF0ED] flex items-center">
+      <section class="h-[341px] bg-[#EAF0ED] px-10 flex items-center">
         <div
           class="flex justify-between items-center w-full max-w-[780px] min-w-[315px] mx-auto max-[769px]:block max-[769px]:w-[315px]"
         >
