feat:add random product list on home page for mobile view

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
       <section class="mb-[60px]">
         <ul
-          class="product-list-web justify-between max-w-[940px] mx-auto flex max-[769px]:hidden"
+          class="product-list-web justify-between max-w-[940px] mx-auto flex gap-5 max-[769px]:hidden"
         >
           <!-- 根據點選的系列渲染商品 -->
         </ul>
@@ -337,6 +337,7 @@
             </figcaption>
             <button class="lg-btn w-full">加入購物車</button>
           </li>
+
         </ul>
       </section>
     </main>
