feat: optimize hover&active

--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
       <div class="flex justify-between w-full max-w-[940px]">
         <button class="menu-btn md:hidden">
           <img
-            class="w-[24px] hover:cursor-pointer hover:scale-150"
+            class="w-[24px] hover:cursor-pointer hover:scale-150 active:scale-150"
             src="./images/baseline-menu.svg"
             alt="漢堡選單"
           />
@@ -53,7 +53,7 @@
           <div class="w-[24px]">
             <a href="cart.html"
               ><img
-                class="hover:scale-150"
+                class="hover:scale-150 active:scale-150"
                 src="./images/shopping-cart.svg"
                 alt="前往購物車"
             /></a>
