feat: optimize active css for series selection btns

--- a/product.html
+++ b/product.html
@@ -109,10 +109,10 @@
         <nav class="min-w-[300px] max-[769px]:w-full max-[769px]:mb-[30px]">
           <ul id="series-select">
             <li class="nav-title"><span>甜點類別</span></li>
-            <li class="nav-btn"><button class="cursor-pointer" value="所有甜點">所有甜點(18)</button></li>
-            <li class="nav-btn"><button class="cursor-pointer" value="本日精選">本日精選(07)</button></li>
-            <li class="nav-btn"><button class="cursor-pointer" value="人氣推薦">人氣推薦(06)</button></li>
-            <li class="nav-btn"><button class="cursor-pointer" value="新品上市">新品上市(05)</button></li>
+            <li><button class="nav-btn w-full h-full cursor-pointer" value="所有甜點">所有甜點(18)</button></li>
+            <li><button class="nav-btn w-full h-full cursor-pointer" value="本日精選">本日精選(07)</button></li>
+            <li><button class="nav-btn w-full h-full cursor-pointer" value="人氣推薦">人氣推薦(06)</button></li>
+            <li><button class="nav-btn w-full h-full cursor-pointer" value="新品上市">新品上市(05)</button></li>
           </ul>
         </nav>
 
